adicionado conexao com o banco de dados e modelo mvc

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- ===== CSS ===== -->
-        <link rel="stylesheet" href="assets/css/styles-dashboard.css">
+        <link rel="stylesheet" href="../assets/css/styles-dashboard.css">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         
         <title>Sidebar sub menus</title>
@@ -71,11 +71,17 @@
             </nav>
         </div>
 
-        <h1>Bem vindo!</h1>
+        <h1>Cadastro de produtos</h1>
         <!-- ===== IONICONS ===== -->
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-        
+        <script>
+            function hideToggle(button, elem) {
+                $('.collapse_sublink').toggle( function () {
+                    console.log('cliquei');
+                });
+            }
+        </script>
         <!-- ===== MAIN JS ===== -->
-        <script src="assets/js/dashboard.js"></script>
+        <script src="../assets/js/dashboard.js"></script>
     </body>
 </html>
