--- a/view/signin.html
+++ b/view/signin.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Entrar | Álcool+</title>
-        <link rel="stylesheet" href="assets/css/styles-register.css">
-        <script src="assets/js/jquery-3.6.0.js"></script>
+        <link rel="stylesheet" href="../assets/css/styles-register.css">
+        <script src="../assets/js/jquery-3.6.0.js"></script>
     </head>
 
     <body>
@@ -44,6 +44,7 @@
                 <div class="button">
                     <input type="button" value="Entrar" onclick="return validar()">
                 </div>
+                <a href="signup.php">Ainda não possui uma conta?</a>
             </form>
         </div>
         <script>
