--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../assets/css/styles-dashboard.css">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         
-        <title>Sidebar sub menus</title>
+        <title>Álcool+ | Dashboard</title>
     </head>
     <body id="body-pd">
         <div class="l-navbar" id="navbar">
@@ -18,51 +18,30 @@
                         <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
                         <a href="#" class="nav__logo">Álcool+</a>
                     </div>
-                        <div class="nav__link collapse">
+                        <div class="nav__link collapse" id="home">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Home</span>
                         </div>
-                        <div class="nav__link collapse">
+                        <div class="nav__link collapse" >
                             <ion-icon name="cube-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Produtos</span>
-
                             <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
 
-                            <ul class="collapse__menu">
-                                <a href="#" class="collapse__sublink">Visualizar</a>
-                                <a href="#" class="collapse__sublink">Cadastrar</a>
-                                <a href="#" class="collapse__sublink">Editar</a>
-                                <a href="#" class="collapse__sublink">Remover</a>
+                            <ul class="collapse__menu" >
+                                <a href="#" class="collapse__sublink" id="addProduct">Cadastrar</a>
+                                <a href="#" class="collapse__sublink" id="viewProduct">Visualizar</a>
                             </ul>
                         </div>
 
-                        <div class="nav__link collapse">
+                        <div class="nav__link collapse" id="estabelecimentos">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Estabelecimentos</span>
-
-                            <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
-                            <ul class="collapse__menu">
-                                <a href="#" class="collapse__sublink">Visualizar</a>
-                                <a href="#" class="collapse__sublink">Cadastrar</a>
-                                <a href="#" class="collapse__sublink">Editar</a>
-                                <a href="#" class="collapse__sublink">Remover</a>
-                            </ul>
                         </div>
-                        <div class="nav__link collapse">
+                        <div class="nav__link collapse" id="clientes">
                             <ion-icon name="people-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Clientes</span>
-
-                            <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
-                            <ul class="collapse__menu">
-                                <a href="#" class="collapse__sublink">Visualizar</a>
-                                <a href="#" class="collapse__sublink">Cadastrar</a>
-                                <a href="#" class="collapse__sublink">Editar</a>
-                                <a href="#" class="collapse__sublink">Remover</a>
-                            </ul>
                         </div>
-                        <a href="./index.html" class="nav__link">
+                        <a href="../index.html" class="nav__link">
                             <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
                             <span class="nav__name">Sair</span>
                         </a>
@@ -70,16 +49,56 @@
                 </div>
             </nav>
         </div>
+        
+        <div id="conteudo">
+            
+        </div>
 
-        <h1>Cadastro de produtos</h1>
+
         <!-- ===== IONICONS ===== -->
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+        <script src="../assets/js/jquery-3.6.0.js"></script>
         <script>
-            function hideToggle(button, elem) {
-                $('.collapse_sublink').toggle( function () {
-                    console.log('cliquei');
+
+            $(document).ready(function() {
+                $("#conteudo").load("viewHome.html");
+            });
+            
+            //Home
+            $("#home").click(function() {
+                $(function(){
+                    $("#conteudo").load("viewHome.html");
                 });
-            }
+            });
+
+
+            //Product
+            $("#viewProduct").click(function() {
+                $(function(){
+                    $("#conteudo").load("viewProduto.html");
+                });
+            });
+
+            $("#addProduct").click(function() {
+                $(function(){
+                    $("#conteudo").load("viewAddProduct.html");
+                });
+            });
+
+            //Estabelecimento
+            $("#estabelecimentos").click(function() {
+                $(function(){
+                    $("#conteudo").load("viewEstabelecimento.html");
+                });
+            });
+
+            //Cliente
+            $("#clientes").click(function() {
+                $(function(){
+                    $("#conteudo").load("viewCliente.html");
+                });
+            });
+            
         </script>
         <!-- ===== MAIN JS ===== -->
         <script src="../assets/js/dashboard.js"></script>
