iniciando segunda feira

--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -81,7 +81,7 @@
 
             $("#addProduct").click(function() {
                 $(function(){
-                    $("#conteudo").load("viewAddProduct.html");
+                    $("#conteudo").load("cadastroProduto.html");
                 });
             });
 
