--- a/view/viewHome.html
+++ b/view/viewHome.html
@@ -1,1 +1,6 @@
-<h1>Bem vindo!</h1>
+<link rel="stylesheet" href="../assets/css/styles-dashboard.css">
+<div class="container">
+    <div class="box">
+        <h1>Bem vindo!</h1>
+    </div>
+</div>
